--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
 nav ul {
     list-style: none;
     padding: 0;
+    overflow:hidden;
 }
 
 nav ul li {
@@ -82,4 +83,53 @@ footer {
     transform: translateY(-50%);
     font-size: 1.5rem; 
     color: #ffcc00; 
+}
+nav ul li a:hover{
+    background-color: #f4f4f4;
+}
+.music-bars{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 100px;
+    margin-top: 20px;
+}
+.bar{
+    width: 10px;
+    height: 50px;
+    background-color:rgb(204, 82, 21) ;
+    margin: 0 5px;
+    animation:bounce 1s infinite ease-in-out;
+}
+@keyframes bounce{
+    0%, 100%{
+        height:20px;
+    }
+    50%{
+        height:100px;
+    }
+}
+.bar:nth-child(1){
+    animation-delay: 0s;
+}
+.bar:nth-child(2){
+    animation-delay: 0.1s;
+}
+.bar:nth-child(3){
+    animation-delay: 0.2s;
+}
+.bar:nth-child(4){
+    animation-delay: 0.3s;
+}
+.bar:nth-child(5){
+    animation-delay: 0.4s;
+}
+.bar:nth-child(6){
+    animation-delay: 0.5s;
+}
+.bar:nth-child(7){
+    animation-delay: 0.6s;
+}
+.bar:nth-child(8){
+    animation-delay: 0.7s;
 }
